--- a/package.json
+++ b/package.json
@@ -23,11 +23,11 @@
   },
   "homepage": "https://github.com/swallsky/alioss#readme",
   "devDependencies": {
-    "css-loader": "^0.28.4",
+    "css-loader": "^0.28.7",
     "html-webpack-plugin": "^2.30.1",
-    "style-loader": "^0.18.2",
     "path": "^0.12.7",
-    "webpack": "^3.5.4",
-    "plupload": "^2.3.2"
+    "style-loader": "^0.18.2",
+    "webpack": "^3.10.0",
+    "cropper": "^3.1.3"
   }
 }
